crates/bpl/tests/snapshots/test__boogie__Test__test0__WhereParsing1.snap
---
source: crates/bpl/tests/test.rs
assertion_line: 41
expression: snapshot_report
---
[Parse Error]
error: unexpected token `where`; expected `)` or `,`
   ┌─ ../../vendor/boogie/Test/test0/WhereParsing1.bpl:16:27
   │
16 │ function f(a: int, b: int where b < 0)  // error: where not allowed among function parameters
   │                           ^^^^^

[Input - ../../vendor/boogie/Test/test0/WhereParsing1.bpl]
// RUN: %boogie -noVerify "%s" > "%t"
// RUN: %diff "%s.expect" "%t"
const x: int;

function R(int) returns (bool);
function Even(int) returns (bool);

var y: int where R(y);
var g: int where g == 12;

procedure P(x: int where x > 0) returns (y: int where y < 0);
  requires x < 100;
  modifies g;
  ensures -100 < y;

function f(a: int, b: int where b < 0)  // error: where not allowed among function parameters
    returns (bool);
